Add feature as comment on facebook

--- a/Test/index.html
+++ b/Test/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Behind The Portal.loader.js";
+      var loaderUrl = buildUrl + "/Test.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Behind The Portal.data.gz",
-        frameworkUrl: buildUrl + "/Behind The Portal.framework.js.gz",
-        codeUrl: buildUrl + "/Behind The Portal.wasm.gz",
+        dataUrl: buildUrl + "/Test.data.gz",
+        frameworkUrl: buildUrl + "/Test.framework.js.gz",
+        codeUrl: buildUrl + "/Test.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Evermore Games",
         productName: "Behind the portal 2.0",
